@@ -205,6 +205,9 @@ settings.resolution=Разрешение экрана:
 settings.fullscreen=Полноэкранный режим
 settings.music_volume=Громкость музыки:
 settings.sound_volume=Громкость звука:
+settings.locale=Язык (изменения вступят в силу после перезагрузки):
+settings.restart_confirm=Для вступления в силу некоторых настроек необходим перезапуск игры. Перезапустить сейчас?
+settings.restart=Перезапустить
 
 country_select.title=Выберите страну, которая будет играть ведущую роль в проекте:
 
